--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -64,7 +64,7 @@
         <header class="navigation">
             <nav> 
                 <button class="nav-btn" id="btn1"><b>ABOUT</b></button>  
-                <button class="nav-btn" id="btn2"><b>NIFTY ENGINE</b></button>  
+                <button class="nav-btn" id="btn2"><b>BONFIRE ENGINE</b></button>  
                 <button class="nav-btn" id="btn3"><b>EPF PROJECT</b></button>  
                 <button class="nav-btn" id="btn4"><b>BOID SIMULATION</b></button>
                 <!-- <a href="acozychristmas\a-cozy-christmas.html">A Cozy Christmas - First game I've ever released!</a> -->
@@ -85,7 +85,7 @@
         location.href = "about.html";
     };
     document.getElementById("btn2").onclick = function() {
-        location.href = "niftyengine\\nifty-engine.html";
+        location.href = "bonfire\\bonfire.html";
     };
     document.getElementById("btn3").onclick = function() {
         location.href = "financeproject\\mypossiblefuture.html"
