--- a/site/pages/acozychristmas/a-cozy-christmas.html
+++ b/site/pages/acozychristmas/a-cozy-christmas.html
@@ -36,6 +36,9 @@
         
         <h1>A Cozy Christmas</h1>
 
+        <h3> WARNING: If you found this page somehow, do not play this game. There are severe camera issues I was not <br>
+            aware of at the time of release and have no way to go back and fix said issues.</h3>
+
         <p>
             I finally released my first game! I made it in 3 days in time for Christmas, so expect some bugs (Also because I made it in Unity haha...).<br>
             If you play it and you have any feedback feel free to share, but remember that I had to cut a lot of corners in order to get it out in 3 days.<br><br>
