--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -65,7 +65,7 @@
             <nav> 
                 <button class="nav-btn" id="btn1"><b>ABOUT</b></button>  
                 <button class="nav-btn" id="btn2"><b>BONFIRE ENGINE</b></button>  
-                <button class="nav-btn" id="btn3"><b>EPF PROJECT</b></button>  
+                <button class="nav-btn" id="btn3"><b>EPF PROJECT [TEST]</b></button>
                 <button class="nav-btn" id="btn4"><b>BOID SIMULATION</b></button>
                 <!-- <a href="acozychristmas\a-cozy-christmas.html">A Cozy Christmas - First game I've ever released!</a> -->
             </nav>
