major site rework to allow for easier updates and page additions [IN PROGRESS]

--- a/src/about.html
+++ b/src/about.html
@@ -82,12 +82,10 @@
                     <h1 style="color: rgb(121, 89, 78); text-align: center;">ABOUT</h1>
 
                     <p>
-                        While I haven't done much with this website so far, I hope to continue developing it in the coming future.
-                        I plan on adding future projects to it, and will update it with current endeavors, whatever those may be.
-                        And yes, this website doesn't look amazing, but I'm not really a front end kind of guy. I did what I could!
+                        Website under construction<br>
+                        Planned completion date: 10/12/25
                         <br><br>
                         The source code for this website can be found <a href="https://github.com/Caleb-Kronstad/calebkronstad.com" target="_blank">here</a>.
-                        Fair warning, it isn't great, but it works (mostly). 
                     </p>
                 </div>
 
