--- a/src/projects/nifty-engine/index.html
+++ b/src/projects/nifty-engine/index.html
@@ -92,7 +92,7 @@
 
 </style>
 
-<head><link rel="icon" href="opengl.png"><title>Bonfire Engine</title></head>
+<head><link rel="icon" href="opengl.png"><title>Nifty Engine</title></head>
 
 <html>
     <body>
@@ -111,12 +111,12 @@
                 <div id="main-text">
                     <br>
                     <div id="title">
-                        <h1>BONFIRE ENGINE</h1>
+                        <h1>NIFTY ENGINE</h1>
                     </div>
             
                     <!-- INTRODUCTION TO ENGINE -->
                     <p style="text-align: center; font-size: 1.25rem;">
-                        <b>Bonfire Engine (Formerly Nifty Engine) is a work-in-progress 3D game engine developed in C++ with OpenGL</b>
+                        <b>Nifty Engine is a 3D game engine developed in C++ with OpenGL</b>
                     </p> 
                 </div>
                 
@@ -130,7 +130,7 @@
                     <div id="in-progress">
                         <br>
                         <h2>Features In-Progress</h2>
-                        <p style="text-wrap: nowrap;">Features that are currently being implemented into Bonfire Engine</p>
+                        <p style="text-wrap: nowrap;">Features that are currently being implemented into Nifty Engine</p>
                         <ul style="text-align: left; font-size: 90%;">
                             <li>Skinned meshes</li>
                             <li>Skeletal animation system</li>
@@ -141,7 +141,7 @@
                     <div id="current-features">
                         <br>
                         <h2>Current Features</h2>
-                        <p style="text-wrap: nowrap;">Features that can be found in Bonfire Engine</p>
+                        <p style="text-wrap: nowrap;">Features that can be found in Nifty Engine</p>
                         <ul style="text-align: left; font-size: 90%;">
                             <li>Basic physics</li>
                             <li>Basic collisions</li>
