--- a/src/hobbies/index.html
+++ b/src/hobbies/index.html
@@ -18,6 +18,9 @@
         <header class="navigation">
             <nav>
                 <button class="nav-btn" id="home-btn"><b>HOME</b></button>
+                <button class="nav-btn" id="projects-btn"><b>PROJECTS</b></button>
+                <button class="nav-btn" id="hobbies-btn"><b>HOBBIES</b></button>
+                <button class="nav-btn" id="contact-btn"><b>CONTACT</b></button>
             </nav>
         </header>
         
@@ -28,8 +31,5 @@
     </body>
 </html>
 
-<script>
-    document.getElementById("home-btn").onclick = function() {
-        location.href = "../index.html";
-    };
-</script>
+
+<script src="../script/nav.js"></script>
