--- a/src/index.html
+++ b/src/index.html
@@ -9,21 +9,7 @@
 </head>
 
 <style>
-    html
-    {
-        font-size: 1vw;
-        overflow-x: hidden;
-        background-color: rgb(18, 5, 0);
-    }
-
-    body
-    {
-        overflow-x: hidden;
-        overflow-y: hidden;
-        margin: 5vh;
-        font: 1em Helvetica;
-    }
-
+    
     .title
     {
         width: 100%;
@@ -32,7 +18,7 @@
         padding: 1vh;
         text-align: center;
         font-size: 4vw;
-        color: rgb(128, 38, 21);
+        color: #802615;
     }
 
     .title h1
@@ -75,31 +61,18 @@
 
     /* Mobile */
     @media screen and (max-width: 768px) {
-        nav {
-            font-size: 16px;
-            gap: 0.5rem;
-        }
-
-        .nav-btn {
-            min-width: 120px;
-            min-height: 44px;
-            font-size: 16px;
-            margin: 0.25rem;
-            border-radius: 0.5rem;
-            border-width: 2px;
-        }
-
         .title h1 {
             margin: 20vh 0;
         }
     }
+    
 </style>
 
 <html>
     <body>
         <header class="navigation">
             <nav>
-                <button class="nav-btn" id="about-btn"><b>ABOUT</b></button>
+                <button class="nav-btn" id="home-btn"><b>HOME</b></button>
                 <button class="nav-btn" id="projects-btn"><b>PROJECTS</b></button>
                 <button class="nav-btn" id="hobbies-btn"><b>HOBBIES</b></button>
                 <button class="nav-btn" id="contact-btn"><b>CONTACT</b></button>
@@ -124,8 +97,8 @@
         return Math.min(Math.max(value, min), max);
     }
 
-    document.getElementById("about-btn").onclick = function() {
-        location.href = "about.html";
+    document.getElementById("home-btn").onclick = function() {
+    location.href = "index.html";
     };
     document.getElementById("projects-btn").onclick = function() {
         location.href = "projects\\index.html";
