--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,7 @@
     .title
     {
         width: 100%;
-        left: 0;
-        top: 50;
-        padding: 1vh;
+        padding-top: 1vh;
         text-align: center;
         font-size: 4vw;
         color: #802615;
@@ -25,7 +23,15 @@
     {
         position: relative;
         z-index: 20;
-        margin: 10vh 0;
+        margin-top: 10vh;
+        margin-bottom: 0.5vh;
+    }
+
+    .title p
+    {
+        margin: 0.5vh;
+        font-size: 30%;
+        color: #944528;
     }
 
     #bonfire-background
@@ -82,6 +88,7 @@
 
         <header class="title">
             <h1>CALEB KRONSTAD</h1>
+            <p>ENGINE/GAMEPLAY PROGRAMMER</p>
             <img id="bonfire-background" src="resources/bonfire-background.png" alt="background">
             <img id="bonfire-animation" src="resources/bonfire-animation.gif" alt="animation">
         </header>
