--- a/src/projects/acozychristmas/index.html
+++ b/src/projects/acozychristmas/index.html
@@ -36,15 +36,13 @@
         
         <h1>A Cozy Christmas</h1>
 
-        <h3> WARNING: If you found this page somehow, do not play this game. There are severe camera issues I was not <br>
-            aware of at the time of release and have no way to go back and fix said issues.</h3>
+        <h3> WARNING: If you found this page somehow, do not play this game at the moment. There are severe camera issues I was not <br>
+            aware of at the time of release. This will be fixed sometime in the future.</h3>
 
         <p>
-            I finally released my first game! I made it in 3 days in time for Christmas, so expect some bugs (Also because I made it in Unity haha...).<br>
-            If you play it and you have any feedback feel free to share, but remember that I had to cut a lot of corners in order to get it out in 3 days.<br><br>
+            This is the first game I have ever released, and it was made from scratch in 3 days for Christmas. Unfortunately, there are many bugs and issues <br>
+            that will not be fixed in the foreseen future.<br><br>
             You can download it on itch.io at <a href="https://calebkronstad.itch.io/a-cozy-christmas" target="_blank">https://calebkronstad.itch.io/a-cozy-christmas</a>.<br><br>
-            I tried having a download link here but all the free things don't let me go over around 25mb and the game<br> 
-            is 100mb so that's unfortunate (I'm not rich 😔).
         </p>
 
     </body>
