--- a/src/hobbies/index.html
+++ b/src/hobbies/index.html
@@ -9,6 +9,20 @@
 </head>
 
 <style>
+    html
+    {
+        overflow-x: hidden;
+        background-color: #120401;
+        scrollbar-gutter: stable both-edges;
+    }
+
+    body
+    {
+        overflow-x: hidden;
+        margin: 5vh;
+        font-family: Helvetica;
+        padding-top: 2vw;
+    }
 
 </style>
 
