--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -6,6 +6,16 @@
     <title>Projects</title>
     
     <link rel="stylesheet" type="text/css" href="../style/nav.css">
+    
+    <!-- Preload gifs -->
+    <link rel="preload" href="../resources/bonfire.gif" as="image" type="image/gif">
+    <link rel="preload" href="../resources/boids.gif" as="image" type="image/gif">
+    <link rel="preload" href="../resources/nifty.gif" as="image" type="image/gif">
+    <link rel="preload" href="../resources/watchpoint.gif" as="image" type="image/gif">
+    <link rel="preload" href="../resources/unstable-arena.gif" as="image" type="image/gif">
+    <link rel="preload" href="../resources/bucket-game.gif" as="image" type="image/gif">
+    <link rel="preload" href="../resources/cozy-christmas.gif" as="image" type="image/gif">
+</head>
 </head>
 
 <style>
