--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -22,8 +22,9 @@
     html
     {
         overflow-x: hidden;
+        overflow-y: scroll;
         background-color: #120401;
-        scrollbar-gutter: stable both-edges;
+        scrollbar-gutter: stable;
     }
 
     body
@@ -83,26 +84,47 @@
     @media screen and (max-width: 768px) {
         body
         {
-            padding-top: 20vh;
+            margin: 0;
+            margin-top: 15vh;
+            padding: 2vh;
+            padding-top: 2vh;
         }
         
         .title
         {
-            margin-left: 5%;
-            font-size: 16px;
+            justify-content: center;
+            margin-left: 0;
+            font-size: 6vw;
+            text-align: center;
         }
-        .project-title
+
+        .project-container
         {
-            font-size: 16px;
+            flex-direction: column;
+            gap: 4vh;
+            margin-bottom: 2vh;
         }
-        .project-description
-        {
-            font-size: 12px;
-        }
+
         .project
         {
-            width: 40vw;
-            height: 36vw;
+            width: 80vw;
+            height: auto;
+        }
+
+        .project-image
+        {
+            height: 50vw;
+        }
+
+        .project-title
+        {
+            font-size: 5vw;
+            display: block;
+        }
+
+        .project-description
+        {
+            font-size: 4vw;
         }
     }
 
@@ -124,44 +146,44 @@
         <br>
         <div class="project-container">
             <div class="project">
-                <a href="bonfire/index.html"><img class="project-image" src="../resources/bonfire.gif"></a>
-                <a href="bonfire/index.html" class="project-title">Bonfire (WIP)</a>
+                <a href="https://github.com/Caleb-Kronstad/Bonfire" target="_blank"><img class="project-image" src="../resources/bonfire.gif"></a>
+                <a href="https://github.com/Caleb-Kronstad/Bonfire" class="project-title" target="_blank">Bonfire (WIP)</a>
                 <p class="project-description">A 3D game engine made using C++ and OpenGL, with a focus on architecture and performance</p>
             </div>
             <div class="project">
-                <a href="boids/index.html"><img class="project-image" src="../resources/boids.gif"></a>
-                <a href="boids/index.html" class="project-title">Boids Simulation</a>
+                <a href="boids/index.html" target="_blank"><img class="project-image" src="../resources/boids.gif"></a>
+                <a href="boids/index.html" class="project-title" target="_blank">Boids Simulation</a>
                 <p class="project-description">A simulation of Boids created using Python and PyGame, includes usage in a demo game</p>
             </div>
         </div>
         <div class="project-container">
             <div class="project">
-                <a href="nifty-engine/index.html"><img class="project-image" src="../resources/nifty.gif"></a>
-                <a href="nifty-engine/index.html" class="project-title">Nifty Engine</a>
+                <a href="nifty-engine/index.html" target="_blank"><img class="project-image" src="../resources/nifty.gif"></a>
+                <a href="nifty-engine/index.html" class="project-title" target="_blank">Nifty Engine</a>
                 <p class="project-description">A 3D game engine made using C++ and OpenGL, with a focus on user interaction and experience</p>
             </div>
             <div class="project">
-                <a href="bonfire/index.html"><img class="project-image" src="../resources/watchpoint.gif"></a>
-                <a href="bonfire/index.html" class="project-title">Watchpoint</a>
+                <a href="https://ckronstad.itch.io/watchpoint" target="_blank"><img class="project-image" src="../resources/watchpoint.gif"></a>
+                <a href="https://ckronstad.itch.io/watchpoint" class="project-title" target="_blank">Watchpoint</a>
                 <p class="project-description">A 2D stealth game made in Unity for Sock Jam 1</p>
             </div>
         </div>
         <div class="project-container">
             <div class="project">
-                <a href="bonfire/index.html"><img class="project-image" src="../resources/unstable-arena.gif"></a>
-                <a href="bonfire/index.html" class="project-title">Unstable Arena (WIP)</a>
+                <a href="unstable-arena/index.html" target="_blank"><img class="project-image" src="../resources/unstable-arena.gif"></a>
+                <a href="unstable-arena/index.html" class="project-title" target="_blank">Unstable Arena (WIP)</a>
                 <p class="project-description">A 3D arena fighting game made in Unreal Engine for Game Developers @ UNCC Fall Game Jam 2025</p>
             </div>
             <div class="project">
-                <a href="bonfire/index.html"><img class="project-image" src="../resources/bucket-game.gif"></a>
-                <a href="bonfire/index.html" class="project-title">Bucket Game</a>
+                <a href="https://sock8416.itch.io/bucket-game" target="_blank"><img class="project-image" src="../resources/bucket-game.gif"></a>
+                <a href="https://sock8416.itch.io/bucket-game" class="project-title" target="_blank">Bucket Game</a>
                 <p class="project-description">A 2D combat game made in Unity for Sock Jam 2</p>
             </div>
         </div>
         <div class="project-container">
             <div class="project">
-                <a href="acozychristmas/index.html"><img class="project-image" src="../resources/cozy-christmas.gif"></a>
-                <a href="acozychristmas/index.html" class="project-title">A Cozy Christmas</a>
+                <a href="https://calebkronstad.itch.io/a-cozy-christmas" target="_blank"><img class="project-image" src="../resources/cozy-christmas.gif"></a>
+                <a href="https://calebkronstad.itch.io/a-cozy-christmas" class="project-title" target="_blank">A Cozy Christmas</a>
                 <p class="project-description">A 3D horror game made in 3 days using Unity</p>
             </div>
             <div class="project">
