--- a/src/hobbies/index.html
+++ b/src/hobbies/index.html
@@ -12,8 +12,9 @@
     html
     {
         overflow-x: hidden;
+        overflow-y: scroll;
         background-color: #120401;
-        scrollbar-gutter: stable both-edges;
+        scrollbar-gutter: stable;
     }
 
     body
