added bonfireengine.com link

--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -187,8 +187,8 @@
         <br>
         <div class="project-container">
             <div class="project">
-                <a href="https://github.com/Caleb-Kronstad/Bonfire" target="_blank"><img class="project-image" src="../resources/bonfire.gif"></a>
-                <a href="https://github.com/Caleb-Kronstad/Bonfire" class="project-title" target="_blank">Bonfire (WIP)</a>
+                <a href="https://bonfireengine.com/" target="_blank"><img class="project-image" src="../resources/bonfire.gif"></a>
+                <a href="https://bonfireengine.com/" class="project-title" target="_blank">Bonfire (WIP)</a>
                 <p class="project-description">A 3D game engine made using C++ and OpenGL, with a focus on architecture and performance</p>
             </div>
             <div class="project">
